__________________________

Solarus 1.6.0 (in progress)
___________________________

Engine changes
--------------

* Solarus 1.5 quests are still supported by Solarus 1.6.
* Treasure dialogs are now optional (#1076).
* Don't center the hero on non-blocking streams (#1063).
* Fix enemies unable to move on non-blocking streams.
* Fix streams stopping when using the sword several times.
* Fix random movement giving the same path for all entities on Mac (#1083).
* Fix possible crash when reloading very old savegame files (#1064).
* Fix crash when a sprite PNG file is missing.
* Fix crash when calling entity:test_obstacles() on an unloaded map.
* Fix crash when opening a chest with a missing treasure dialog (#1089).
* Fix joypad deadzone issue (#672) by strycore.
* Fix compilation error with Clang 3.9 in SNES_SPC.
* Fix possible compilation error when HAVE_UNISTD_H has no value (#1084).
* Fix hero:on_movement_changed() not called (#1095).
* Fix scripts failing to load if a directory exists with the same name (#1100).
* Improve Lua error messages.

Solarus launcher GUI changes
----------------------------

* Clear the console when a quest is started.

Lua API changes
---------------

Changes that do not introduce incompatibilities:

* Add a shader API.
* Video mode functions are now deprecated. Use shader functions instead.
* Add a function sol.main.get_quest_version() (#1058) by Nate-Devv.
* Add a function sol.main.get_resource_ids() to get the resource lists (#959).
* Add abilities push, grab and pull to game:get/set_ability() (#788).
* Add methods entity:get_property() and entity:set_property() (#1094).
* Add methods entity:get_properties() and entity:set_properties() (#1144).
* Add methods entity:get_layer() and entity:set_layer().
* Add methods enemy:get/set_attacking_collision_mode() (#1066).
* Add a method sprite:get_frame_src_xy() (#1093).
* sprite:get_num_frames() can now optionally take an animation and direction.