@@ -11,6 +11,7 @@ Engine changes
 * Don't center the hero on non-blocking streams (#1063).
 * Fix enemies unable to move on non-blocking streams.
 * Fix streams stopping when using the sword several times.
+* Fix stairs activating when the hero is not exactly aligned.
 * Fix random movement giving the same path for all entities on Mac (#1083).
 * Fix possible crash when reloading very old savegame files (#1064).
 * Fix crash when a sprite PNG file is missing.
